# Centauri-Code-Editor

./: Cargo.toml  Dockerfile  README.md  cross_arm7.Dockerfile  cross_win.Dockerfile  release.Dockerfile
src/: config.rs  highlight.rs  logging.rs  main.rs  tui.rs
